--- a/frontend-app/android/app/src/main/res/values/strings.xml
+++ b/frontend-app/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">frontend-app</string>
-    <string name="title_activity_main">frontend-app</string>
+    <string name="app_name">SmartPOS</string>
+    <string name="title_activity_main">SmartPOS</string>
     <string name="package_name">io.ionic.starter</string>
     <string name="custom_url_scheme">io.ionic.starter</string>
 </resources>
